--- a/main.yaml
+++ b/main.yaml
@@ -10,13 +10,13 @@ Resources:
   VPCStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: https://snooze-cf-bucket.s3.amazonaws.com/projects/make-network/vpc.yaml
+      TemplateURL: https://S3バケット名.s3.amazonaws.com/projects/フォルダ名/vpc.yaml
       Parameters:
         PJCode: !Ref PJCode
 
   SGStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: https://snooze-cf-bucket.s3.amazonaws.com/projects/make-network/sg.yaml
+      TemplateURL: https://S3バケット名.s3.amazonaws.com/projects/フォルダ名/sg.yaml
       Parameters:
         PJCode: !Ref PJCode
